fix: CORS 生產環境移除 localhost + 線程池對齊連接池大小
#7 CORS：localhost origins 改為僅 dev profile 才加入，
    生產環境只允許 CORS_ALLOWED_ORIGINS 環境變數指定的域名。

#12 連接池 < 線程池：broadcastExecutor maxPoolSize 預設改為
    讀取 HIKARI_MAX_POOL_SIZE（預設 20），避免 50 threads 搶
    20 connections 造成連線飢餓。

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>