@@ -3,6 +3,7 @@ package com.trader.auth.config;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.env.Environment;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
@@ -17,10 +18,15 @@ import java.util.List;
  *
  * 配置方式：
  * - 環境變數 CORS_ALLOWED_ORIGINS（逗號分隔）→ 優先使用
- * - 預設：localhost:3000, localhost:3001（開發環境）
+ * - dev profile：自動加入 localhost:3000, localhost:3001（方便本地調試）
+ * - prod profile：只允許 CORS_ALLOWED_ORIGINS 指定的域名
  *
  * 正式環境範例：
  *   CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+ *
+ * 面試重點：
+ *   - 生產環境不該允許 localhost origin，否則用戶本機惡意網站可帶 cookie 打 API
+ *   - Spring Profiles 區分 dev/prod 配置，避免硬編碼環境判斷
  */
 @Configuration
 @Slf4j
@@ -28,6 +34,12 @@ public class CorsConfig implements WebMvcConfigurer {
 
     @Value("${cors.allowed-origins:}")
     private String corsAllowedOrigins;
+
+    private final Environment environment;
+
+    public CorsConfig(Environment environment) {
+        this.environment = environment;
+    }
 
     @Override
     public void addCorsMappings(CorsRegistry registry) {
@@ -72,19 +84,27 @@ public class CorsConfig implements WebMvcConfigurer {
                     .forEach(origins::add);
         }
 
-        // 2. 永遠包含開發環境域名（方便本地調試）
-        List<String> devOrigins = List.of(
-                "http://localhost",
-                "http://localhost:3000",
-                "http://localhost:3001",
-                "http://127.0.0.1",
-                "http://127.0.0.1:3000",
-                "http://127.0.0.1:3001"
-        );
-        for (String dev : devOrigins) {
-            if (!origins.contains(dev)) {
-                origins.add(dev);
+        // 2. 僅 dev profile 才加入 localhost（生產環境不允許）
+        List<String> activeProfiles = Arrays.asList(environment.getActiveProfiles());
+        if (activeProfiles.contains("dev") || activeProfiles.isEmpty()) {
+            List<String> devOrigins = List.of(
+                    "http://localhost",
+                    "http://localhost:3000",
+                    "http://localhost:3001",
+                    "http://127.0.0.1",
+                    "http://127.0.0.1:3000",
+                    "http://127.0.0.1:3001"
+            );
+            for (String dev : devOrigins) {
+                if (!origins.contains(dev)) {
+                    origins.add(dev);
+                }
             }
+            log.debug("Dev profile 偵測到，已加入 localhost origins");
+        }
+
+        if (origins.isEmpty()) {
+            log.warn("CORS: 無允許的 origins！請設定 CORS_ALLOWED_ORIGINS 環境變數");
         }
 
         return origins;
